APIS avanzado segunda parte controladores mongoose mysql sqlserver employe hasta post

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT = 8080
+DB_AASFF_MONGO= mongodb+srv://dlaccess_AASFF:kNlQ5CwmlQ8IUUDd@dlaccess.gdh4d.mongodb.net/dbsistema
+
+USER_MONGO_DLACCESS=dlaccess_AASFF
+PASS_MONGO_DLACCESS=kNlQ5CwmlQ8IUUDd
+
