--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.48",
-    "mongoose": "^8.14.3"
+    "mongoose": "^8.15.0",
+    "mysql2": "^3.14.1",
+    "sequelize": "^6.37.7",
+    "tedious": "^18.6.1"
   }
 }
